Update DE-PARA.xlsx handling in FaturaProcessorApp and enhance cSpell configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,13 @@
   "cSpell.words": [
     "customtkinter",
     "errorlevel",
+    "initialfile",
+    "nsew",
+    "padx",
+    "pady",
     "pythonw",
     "repositorio",
+    "startfile",
     "venv",
     "winget"
   ]
